Fix "X" alignment on file dropzone and upgraded TinyMCE to 5.10.9

--- a/frontend-src/standard/src/styles/components/_dropzone.scss
+++ b/frontend-src/standard/src/styles/components/_dropzone.scss
@@ -158,7 +158,7 @@
 				.button {
 					font-weight: bold;
 					font-size: 8px;
-					padding: 2px;
+					padding: 0px;
 					align-items: center;
 					text-align: center;
 					border-radius: 100%;
